puree-tests/src/test/resources/neg/UnusedNil.scala
object UnusedOption {
  def f(): Int = {
    Nil
    1
  }
}
